<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blackbkgnd"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:textAlignment="center"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/Question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/text_select_categories"
        android:textAlignment="center"
        android:textColor="#FFFFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Question"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/Outline_I"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:text="@string/text_outline_I"
            android:textColor="#FFFFFFFF"
            android:textColorHint="#C9C9C9C9"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/Outline_A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_outline_A"
            android:textColor="#FFFFFFFF"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/Outline_B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_outline_B"
            android:textColor="#FFFFFFFF"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/Outline_C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_outline_C"
            android:textColor="#FFFFFFFF"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/Outline_D"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_outline_D"
            android:textColor="#FFFFFFFF"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/Outline_E"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_outline_E"
            android:textColor="#FFFFFFFF"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/Outline_F"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_outline_F"
            android:textColor="#FFFFFFFF"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/Outline_H"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_outline_H"
            android:textColor="#FFFFFFFF"
            android:textSize="14sp" />

    </LinearLayout>

    <Button
        android:id="@+id/Continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:background="#FF7730"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/button_continue"
        android:textColor="#FFFFFFFF"
        android:textStyle="bold" />

</RelativeLayout>