<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blackbkgnd" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/NextImage"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/image_example" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/text_explanation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/text_explanation"
                android:textColor="#FFFFFFFF"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/text_ref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="18dp"
        android:paddingLeft="10dp"
        android:text="@string/text_reference"
        android:textColor="#FFFFFFFF"
        android:textSize="12sp" />

    <Button
        android:id="@+id/Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_ref"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="14dp"
        android:layout_marginLeft="16dp"
        android:background="#75757575"
        android:minHeight="40dp"
        android:minWidth="50dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/button_back_to_selector"
        android:textColor="#FFFFFFFF"
        android:textSize="14sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/image_example"
        android:contentDescription="@string/genericDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/basic" />

    <Button
        android:id="@+id/PreviousImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Back"
        android:layout_alignBottom="@+id/Back"
        android:layout_toLeftOf="@+id/NextImage"
        android:layout_marginRight="16dp"
        android:background="#FF7730"
        android:minHeight="40dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/button_prev_image"
        android:textColor="#FFFFFFFF"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/NextImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/PreviousImage"
        android:background="#FF7730"
        android:minHeight="40dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginRight="16dp"
        android:text="@string/button_next_image"
        android:textColor="#FFFFFFFF"
        android:textSize="14sp"
        android:textStyle="bold" />

</RelativeLayout>