<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blackbkgnd"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:textAlignment="center"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/Question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/home_welcome"
        android:textAlignment="center"
        android:textColor="#FFFFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Button_About"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Button_Start"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#75757575"
        android:onClick="main"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:shadowColor="#434343"
        android:text="@string/button_about"
        android:textColor="#FFFFFFFF"
        android:textColorLink="#FFFFFFFF"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Button_Start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Button_About"
        android:layout_alignRight="@+id/Button_About"
        android:layout_below="@+id/Question"
        android:layout_marginTop="72dp"
        android:background="#FF7730"
        android:onClick="main"
        android:shadowColor="#434343"
        android:text="@string/home_button"
        android:textColor="#FFFFFFFF"
        android:textColorLink="#FFFFFFFF"
        android:textStyle="bold" />
    
</RelativeLayout>
